# GraphGL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  visual_app.vcxproj  visual_app.vcxproj.filters
Debug/: Camera.nativecodeanalysis.sarif  Circle.nativecodeanalysis.sarif  CodeAnalysisResultManifest.txt  CreateWindow.nativecodeanalysis.sarif  Game.nativecodeanalysis.sarif  Line.nativecodeanalysis.sarif  Shader.nativecodeanalysis.sarif  Shader.nativecodeanalysis.xml  Text.nativecodeanalysis.sarif  TransparentSquareRenderer.nativecodeanalysis.sarif  VectorCircle.nativecodeanalysis.sarif  VectorLine.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif  vc.nativecodeanalysis.all.xml  vc143.idb  visual_app.exe.recipe
Debug/visual_app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  visual_app.lastbuildstate
Shaders/: FragmentShader_line.fs  FragmentShader_text.fs  VertexShader.vs  VertexShader_text.vs
dependencies/graph_lib/: graph.h  link.cpp
shaders/: fs_base.shader  vs_line.shader  vs_square.shader
source/: Camera.cpp  Circle.cpp  Circle.h  Clipboard.cpp  Clipboard.h  CreateWindow.cpp  Game.cpp  Game.h  Line.cpp  Line.h  Shader.cpp  Text.cpp  Text.h  TransparentSquareRenderer.cpp  TransparentSquareRenderer.h  VectorCircle.cpp  VectorLine.cpp  VectorLine.h  main.cpp  stb_image_write.h
src/: camera.cpp  camera.h  circle.cpp  circle.h  clipboard.cpp  clipboard.h  create_window.cpp  create_window.h  game.cpp  game.h  input_action.cpp  input_action.h  input_handler.cpp  input_handler.h  line.cpp  line.h  main.cpp  shader.cpp  shader.h  text.cpp  text.h  transparent_square.cpp  transparent_square.h  vector_circle.cpp  vector_circle.h  vector_line.cpp  vector_line.h
src/graph_lib/: constants.h  graph.cpp  graph.h  (+1 more)
testfiles/: adjacency_matrix.txt  example.txt  lab_3_t.txt  lengths_table.txt  save_example_2.txt  save_example_4.txt
(+11 files in other folders)
